--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -67,6 +67,11 @@ body {
   visibility: hidden;
 }
 
+.card-front {
+  background-color: #999999;
+  box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
+}
+
 .card-back {
   font-weight: bold;
 }
